--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Dataset landing page" />
-  <title>TODO: Dataset Name</title>
+  <title>Multimodal Single-Speed Chain Conveyer Dataset</title>
   <style>
     :root{
       --bg:#0b0f17;
