--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <header class="hero">
       <h1 class="title">SSCC Dataset</h1>
       <p class="subtitle">
-        A synchronized multimodal dataset for anomaly detection and fault diagnosis on a single-speed chain conveyor system.
+        A synchronized multimodal 7-channel dataset for fault analysis on a single-speed chain conveyor system.
       </p>
 
       <div class="cta">
@@ -185,11 +185,11 @@
       </div>
 
       <div class="pillrow">
-        <div class="pill">TODO: #samples</div>
-        <div class="pill">TODO: #channels</div>
-        <div class="pill">Audio + Vibration</div>
-        <div class="pill">Anomaly Detection + Fault Classification</div>
-        <div class="pill">TODO: license</div>
+        <div class="pill">6,669 clips</div>
+        <div class="pill">7 synchronized channels</div>
+        <div class="pill">3 Audio + 4 Vibration</div>
+        <div class="pill">Fault Detection + Fault Classification</div>
+        <div class="pill">CC BY 4.0</div>
         <div class="pill">v1.0</div>
       </div>
     </header>
