--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ environmental noise conditions. Only audio tracks are used from mobile recording
           </tbody>
         </table>
       </div>
-<h2>Dataset Directory Structure</h2>
+<h3 style="margin:12px 0 6px; font-size:16px;">Dataset Directory (clips)</h3>
 <div class="filetree" aria-label="SSCC directory tree">
   <ul>
     <li><strong>ASDdataset/</strong>
